[gd_scene load_steps=2 format=3 uid="uid://cyi15q5snwugw"]

[ext_resource type="Script" uid="uid://10kvcn6dlobl" path="res://scripts/MainMenu.gd" id="1_yqorp"]

[node name="MainScene" type="Control"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(400, 300)
layout_mode = 0
offset_right = 277.0
offset_bottom = 108.0
alignment = 1
script = ExtResource("1_yqorp")

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(60, 40)
layout_mode = 2
text = "DeepSeek API Client"
horizontal_alignment = 1
vertical_alignment = 1

[node name="APIKeyInput" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(60, 40)
layout_mode = 2
placeholder_text = "Enter your DeepSeek API Key"
alignment = 1
secret = true

[node name="SaveAPIKeyButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Save API Key"

[node name="ChatButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Open Chat Interface"
